// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Menu component will render for an authenticated user 1`] = `
<div
  className="menu"
>
  <Brand />
  <Search
    closeSearch={[Function]}
    isShowing={false}
    openSearch={[Function]}
    pathname="/"
    searchUpdate={[MockFunction]}
  />
  <div
    className="items extended"
  >
    <AuthMenu />
  </div>
</div>
`;

exports[`The Menu component will render for users authenticated as guest 1`] = `
<div
  className="menu"
>
  <Brand />
  <Search
    closeSearch={[Function]}
    isShowing={false}
    openSearch={[Function]}
    pathname="/"
    searchUpdate={[MockFunction]}
  />
  <Login
    showSignIn={[Function]}
  />
  <SignIn
    caller="menu"
    removeSignin={[Function]}
  />
</div>
`;

exports[`The Menu component will render the Login 1`] = `
<div
  className="items signin"
>
  <i
    aria-hidden="true"
    className="fa fa-sign-in"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`The Menu component will render the auth menu 1`] = `
<Fragment>
  <NavLink
    exact={true}
    onClick={[MockFunction]}
    to="/"
  >
    Home
  </NavLink>
  <NavLink
    exact={true}
    onClick={[MockFunction]}
    to="/pins"
  >
    My Pins
  </NavLink>
  <NavLink
    onClick={[Function]}
    to="/another"
  >
    Logout
  </NavLink>
</Fragment>
`;

exports[`The Menu component will render the brand 1`] = `
<div
  className="brand"
>
  <a
    href="/"
  >
    <i
      aria-hidden="true"
      className="fa fa-pinterest"
    />
     Clone
  </a>
</div>
`;
